--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Nina Carducci, photographe à Bordeaux</title>
+	<meta name="description" content="Confiez vos souvenirs à Nina Carducci, photographe passionnée à Bordeaux. Séances photo, retouches professionnelles et albums personnalisés pour immortaliser vos moments uniques." />
+
+	<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "telephone": "05 56 67 78 89",
+		  "openingHours": [
+			"Mo-Fr 10:00-19:00"
+		  ]
+		}
+		</script>
+		
+	
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,7 +119,7 @@
 		<div class="service">
 			<div class="service__description">
 				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace à Bordeaux pour réaliser vos photos</p>
 			</div>
 			<div class="service__price">
 				<h4>350€/demi journée</h4>
