--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
 		}
 		</script>
 		
+  <!-- Metadonnées OpenGraph pour Facebook et autres réseaux sociaux -->
+  <meta property="og:title" content="Nina Carducci, photographe à Bordeaux">
+  <meta property="og:description" content="Confiez vos souvenirs à Nina Carducci, photographe passionnée à Bordeaux. Séances photo, retouches professionnelles et albums personnalisés pour immortaliser vos moments uniques avec authenticité.">
+  <meta property="og:image" content="./assets/images/nina.webp">
+  <meta property="og:url" content="https://ninacarducci.github.io/">
+  <meta property="og:type" content="website">
+
+  <!-- Metadonnées Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nina Carducci, photographe à Bordeaux">
+  <meta name="twitter:description" content="Confiez vos souvenirs à Nina Carducci, photographe passionnée à Bordeaux. Séances photo, retouches professionnelles et albums personnalisés pour immortaliser vos moments uniques avec authenticité.">
+  <meta name="twitter:image" content="./assets/images/nina.webp">
+
 	
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
