--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <meta property="og:title" content="Nina Carducci, photographe à Bordeaux">
   <meta property="og:description" content="Confiez vos souvenirs à Nina Carducci, photographe passionnée à Bordeaux. Séances photo, retouches professionnelles et albums personnalisés pour immortaliser vos moments uniques avec authenticité.">
   <meta property="og:image" content="./assets/images/nina.webp">
-  <meta property="og:url" content="https://ninacarducci.github.io/">
+  <meta property="og:url" content="https://mtgy.github.io/ninacarducci.github.io-main">
   <meta property="og:type" content="website">
 
   <!-- Metadonnées Twitter Cards -->
